# YAIS

./: .breakpoints  LICENSE  README.md  dont-touch.py  keep_alive.py  main.py  music.py  onCommandError.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
cogs/: autodisabled.txt  badwords.txt  channel.txt  commands.py  dev.py  economy.py  fun.py  giveaway.py  help.py  mod.py  music.py  onCommandError.py  slash.py  suggest.py
templates/: home.html
