[tool.poetry]
name = "YAIS bot."
version = "0.4.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
replit = "^3.2.4"
PyPerspective = "^1.0.4"
discord = "^1.7.3"
NudeNet = "^2.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
