[tool.poetry]
name = "YAIS bot."
version = "0.6.0"
description = "A Discord bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
replit = "^3.2.4"
PyPerspective = "^1.0.4"
disnake = "^2.1.5"
PySpective = "^0.0.2"
discord = "^1.7.3"
googletrans = "^3.0.0"
"google-translate.py" = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
